--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
     <meta charset="UTF-8">
 
     <title>❤️Rupali's Personal Site❤️</title>
+    <link rel="stylesheet" href="css/style.css">
+    
 </head>
+
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\rabro\Documents\Programming Practice\HTML Practice\Web Development\HTML - Personal Site\Rupali-modified.png" alt="Rupali Oberoi Picture"></td>
+      <td><img src="C:\Users\rabro\Documents\Programming Practice\HTML Practice\Web Development\HTML - Personal Site\CSS My Site\CSS my site\rupali.jpg" alt="Rupali Oberoi Picture"></td>
       <td><h1>Rupali Oberoi</h1>  
         <p><em><a href= "www.linkedin.com/in/rupalioberoi">Software Engineer</a></em></p>
         <p>I am going to become a software engineer before June</p>
         <a href="hobbies.html">My Hobbies</a>
         <a href="contact-me.html">Contact me</a></td>
-    </tr>
+    </tr> 
     
   </table cellspacing="20">
   <hr>
@@ -58,9 +61,9 @@
     </tr>
     <tr>
       <td>skating ⭐⭐</td>
-      <td>photography ⭐</td>
+      <td>influencer ⭐</td>
     </tr>
   </table>
 
 </body>
-</html>
+</html> 
