--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="rupali.jpg" alt="Rupali's image"></td>
+      <td><img src="./rupali.jpg" alt="Rupali's image"></td>
       <td><h1>Rupali Oberoi</h1>  
         <p><em><a href= "www.linkedin.com/in/rupalioberoi">Software Engineer</a></em></p>
         <p>I am going to become a software engineer before June</p>
